--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 :root {
     --pmdarkblue: #152233;
     --pmlightblue: #9DD4E8;
     --pmbrown: #885334;
     --pmbgolden: #E5C18A;
     --pmyellow: #F9EBC8;
-    --titlefont: "DM Serif Display";
+    --titlefont: "PT Serif";
+    --bodyfont: "Montserrat";
 }
 
 body {
@@ -19,7 +19,7 @@ header {
     background-color: var(--pmdarkblue);
     color: var(--pmbgolden);
 }
-header div {
+#mainHeader {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -41,6 +41,7 @@ header h1 {
     border: none;
     background-color: var(--pmdarkblue);
     color: var(--pmbgolden);
+    font-family: var(--bodyfont);
 }
 nav {
     text-align: center;
@@ -50,6 +51,7 @@ nav a {
     color: var(--pmbgolden);
     text-decoration: none;
     margin: 0 10px;
+    font-family: var(--bodyfont);
 }
 
 
@@ -62,6 +64,7 @@ footer {
     bottom: 0;
     width: 100%;
     justify-content: space-between;
+    font-family: var(--titlefont);
 }
 footer h1 {
     font-size: 20px;
@@ -83,6 +86,11 @@ footer p {
     display: grid;
     grid-template-columns: 1fr 3fr;
 }
+#search {
+    border-right: 2px solid var(--pmdarkblue);
+    height: 130%;
+    font-family: var(--bodyfont);
+}
 #searchForm {
     display: flex;
     flex-direction: column;
@@ -93,7 +101,11 @@ footer p {
 }
 #searchForm input {
     margin-bottom: 12px;
+    width: 170px;
 }   
+#searchForm select {
+    width: 177px;
+}
 #searchButton {
     display: flex;
     margin-top: 30px;
