--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+:root {
+    --pmdarkblue: #152233;
+    --pmlightblue: #9DD4E8;
+    --pmbrown: #885334;
+    --pmbgolden: #E5C18A;
+    --pmyellow: #F9EBC8;
+    --titlefont: "PT Serif";
+    --bodyfont: "Montserrat";
+}
+
 /* search page */
 .searchPage {
     display: grid;
@@ -5,13 +16,17 @@
 }
 #search {
     border-right: 2px solid var(--pmdarkblue);
-    height: 130%;
+    height: 100%;
     font-family: var(--bodyfont);
+    background-color: var(--pmyellow);
 }
 #searchForm {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
+    color: var(--pmdarkblue);
 }
 #searchForm label {
     margin-bottom: 2px;
@@ -27,4 +42,40 @@
     display: flex;
     margin-top: 30px;
     justify-self: center;
+    color: var(--pmdarkblue);
+    background-color: var(--pmbgolden);
+    border-color: var(--pmbgolden);
+}
+
+/* book list */
+.bookList {
+    margin-bottom: 3em;
+}
+.book {
+    margin-left: 1em;
+    padding-bottom: 1em;
+    border-bottom: 1px solid var(--pmbrown);
+}
+.book h2, p, a {
+    padding-left: 20px;
+}
+.book h2 {
+    font-family: var(--titlefont);
+    margin-bottom: 0;
+    color: var(--pmdarkblue);
+}
+.book p {
+    font-family: var(--bodyfont);
+    font-size: 0.8em;
+    margin-top: 3px;
+    color: var(--pmdarkblue);
+}
+.book a {
+    font-family: var(--bodyfont);
+    font-size: 0.7em;
+    display: flex;
+    justify-content: right;
+    margin-right: 2.5em;
+    text-decoration: none;
+    color: var(--pmbrown);
 }
