--- a/src/css/search.css
+++ b/src/css/search.css
@@ -16,7 +16,7 @@
 }
 #search {
     border-right: 2px solid var(--pmdarkblue);
-    height: 100%;
+    height: 100.2%;
     font-family: var(--bodyfont);
     background-color: var(--pmyellow);
 }
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    padding-left: 5px;
+    padding-left: 10px;
     padding-right: 5px;
     color: var(--pmdarkblue);
 }
@@ -47,9 +47,30 @@
     border-color: var(--pmbgolden);
 }
 
+@media (min-width: 1000px) {
+    .searchPage {
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+    }    
+    #searchForm {
+        justify-self: center;
+    }
+    .book {
+        width: 400px;
+        height: 500px;
+    }
+    .bookList {
+        flex-wrap: wrap;
+    }
+}
+
 /* book list */
 .bookList {
-    margin-bottom: 3em;
+    margin-bottom: 2em;
+}
+.bookImg {
+    margin-top: 2em;
+    margin-left: 1.5em;
 }
 .book {
     margin-left: 1em;
@@ -78,4 +99,19 @@
     margin-right: 2.5em;
     text-decoration: none;
     color: var(--pmbrown);
+}
+
+#nextButton {
+    grid-column: 2;
+    width: 6em;
+    padding: 2px;
+    font-family: var(--bodyfont);
+    display: flex;
+    justify-content: center;
+    justify-self: right;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    color: var(--pmdarkblue);
+    background-color: var(--pmyellow);
+    border-color: var(--pmbyellow);
 }
