--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,7 +27,7 @@ main {
 
 #popularBooks {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 1em;
 }
 
