--- a/src/css/search.css
+++ b/src/css/search.css
@@ -58,9 +58,19 @@
     .book {
         width: 400px;
         height: 500px;
+        align-content: end;
+        position: relative;
     }
     .bookList {
+        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
+    }
+    .bookImg {
+        position: absolute;
+        top: 0;
+        left: 0; 
+        margin-top: 0; 
     }
 }
 
@@ -115,3 +125,16 @@
     background-color: var(--pmyellow);
     border-color: var(--pmbyellow);
 }
+
+.addButton {
+    font-family: var(--bodyfont);
+    font-size: 0.7em;
+    display: flex;
+    justify-content: right;
+    margin-right: 2.5em;
+    text-decoration: none;
+    color: var(--pmbrown);
+    border: none;
+    background: none;
+}
+
