--- a/src/css/search.css
+++ b/src/css/search.css
@@ -129,6 +129,19 @@
     background: none;
 }
 
+.removeButton {
+    font-family: var(--bodyfont);
+    font-size: 0.7em;
+    display: flex;
+    justify-content: right;
+    margin-right: 2.5em;
+    text-decoration: none;
+    color: var(--pmbrown);
+    border: none;
+    background: none;
+}
+
+
 #nextButton {
     grid-column: 2;
     width: 6em;
