--- a/src/css/list.css
+++ b/src/css/list.css
@@ -19,3 +19,13 @@ main {
 .book img {
     max-width: 200px;
 }
+
+#listButton {
+    font-family: var(--bodyfont);
+    font-size: 0.7em;
+    display: flex;
+    text-decoration: none;
+    color: var(--pmbrown);
+    border: none;
+    background: none;
+}
